# services/scribe/grpc/types/types/v1/service.pb.gw.go
@@ -124,6 +124,31 @@ func local_request_ScribeService_FilterLogs_0(ctx context.Context, marshaler run
 
 }
 
+func request_ScribeService_WatchLogs_0(ctx context.Context, marshaler runtime.Marshaler, client ScribeServiceClient, req *http.Request, pathParams map[string]string) (ScribeService_WatchLogsClient, runtime.ServerMetadata, error) {
+	var protoReq WatchLogsRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	stream, err := client.WatchLogs(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
+
+}
+
 // RegisterScribeServiceHandlerServer registers the http handlers for service ScribeService to "mux".
 // UnaryRPC     :call ScribeServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -185,6 +210,13 @@ func RegisterScribeServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 
 		forward_ScribeService_FilterLogs_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
+	})
+
+	mux.Handle("POST", pattern_ScribeService_WatchLogs_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
+		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+		return
 	})
 
 	return nil
@@ -294,6 +326,28 @@ func RegisterScribeServiceHandlerClient(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_ScribeService_WatchLogs_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/types.v1.ScribeService/WatchLogs", runtime.WithHTTPPathPattern("/grpc/v1/watch_logs"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ScribeService_WatchLogs_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ScribeService_WatchLogs_0(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -303,6 +357,8 @@ var (
 	pattern_ScribeService_Watch_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"grpc", "v1", "health_watch"}, ""))
 
 	pattern_ScribeService_FilterLogs_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"grpc", "v1", "filter_logs"}, ""))
+
+	pattern_ScribeService_WatchLogs_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"grpc", "v1", "watch_logs"}, ""))
 )
 
 var (
@@ -311,4 +367,6 @@ var (
 	forward_ScribeService_Watch_0 = runtime.ForwardResponseStream
 
 	forward_ScribeService_FilterLogs_0 = runtime.ForwardResponseMessage
+
+	forward_ScribeService_WatchLogs_0 = runtime.ForwardResponseStream
 )
